--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1,52 +1,80 @@
 * {
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
 }
-
 .game-container {
-    display: flex;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  height: 60vh;
+  justify-content: center;
+  align-items: center;
 }
-
 .game-buttons {
-    display: flex;
-    flex-wrap: wrap;
-    width: 300px;
+  display: flex;
+  flex-wrap: wrap;
+  width: 300px;
 }
-
 .game-button {
-    height: 150px;
-    width: 50%;
+  height: 150px;
+  width: 50%;
+  opacity: 0.5;
+  transition: opacity 0.35s ease-in-out;
 }
-
 .game-button[data-color="red"] {
-    background-color: #a00;
-    border-radius:  0 100% 0 0;
+  background-color: #a00;
+  border-radius: 0 100% 0 0;
 }
-
 .game-button[data-color="green"] {
-    background-color: #0a0;
-    border-radius: 100% 0 0 0;
+  background-color: #0a0;
+  border-radius: 100% 0 0 0;
 }
-
 .game-button[data-color="blue"] {
-    background-color: #00a;
-    border-radius: 0 0 100% 0;
+  background-color: #00a;
+  border-radius: 0 0 100% 0;
 }
-
 .game-button[data-color="yellow"] {
-    background-color: #ee4;
-    border-radius: 0 0 0 100%;
+  background-color: #ee4;
+  border-radius: 0 0 0 100%;
 }
-
 .center {
-    background-color: #000;
-    height: 100px;
-    width: 100px;
-    border-radius: 50%;
-    position: absolute;
+  background-color: #000;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  position: absolute;
+}
+.highlight {
+  opacity: 1;
+  border: 5px solid black;
+}
+.game-info {
+  padding: 25px 0;
+}
+.game-level-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 25px;
+}
+.game-computer-array-container,
+.game-user-array-container,
+.game-turn-container {
+  margin-bottom: 20px;
+}
+.game-level-label {
+  font-weight: 300;
+  margin-right: 10px;
+}
+.game-level-text {
+  pointer-events: none;
+  border: 2px solid #bbb;
+  text-align: center;
+  min-width: 50px;
+  padding: 10px;
+  font-weight: 700;
+}
+.button-disabled {
+  pointer-events: none;
+  border: 5px solid purple;
 }
